add token verification
