# server/auth/auth.route.js
@@ -1,10 +1,10 @@
 require('module-alias/register');
-// const config = require('@config/config');
+const config = require('@config/config');
 const express = require('express');
 // const validate = require('express-validation');
-// const expressJwt = require('express-jwt');
+const expressJwt = require('express-jwt');
 // const paramValidation = require('@config/param-validation');
-// const authCtrl = require('./auth.controller');
+const authCtrl = require('./auth.controller');
 
 const router = express.Router(); // eslint-disable-line new-cap
 
@@ -19,13 +19,48 @@ const router = express.Router(); // eslint-disable-line new-cap
 //   authCtrl.get
 // );
 
-// /** GET /api/auth/random-number - Protected route,
-//  * needs token returned by the above as header. Authorization: Bearer {token} */
-// router.route('/random-number').get(
-//   expressJwt({
-//     secret: config.jwtSecret
-//   }),
-//   authCtrl.getRandomNumber
-// );
+/**
+ * @swagger
+ * /api/auth/check-access:
+ *  get:
+ *      tags:
+ *      - Auth
+ *      security:
+ *      - JWT: []
+ *      description: Protected route, used to access-token verification
+ *      responses:
+ *          401:
+ *              $ref: "#/responses/Standard401ErrorResponse"
+ *          200:
+ *              $ref: "#/responses/Standard200ErrorResponse"
+ */
+router.route('/check-access').get(
+  expressJwt({
+    secret: config.jwtSecretAccess
+  }),
+  authCtrl.check
+);
+
+/**
+ * @swagger
+ * /api/auth/check-refresh:
+ *  get:
+ *      tags:
+ *      - Auth
+ *      security:
+ *      - JWT: []
+ *      description: Protected route, used to refresh-token verification
+ *      responses:
+ *          401:
+ *              $ref: "#/responses/Standard401ErrorResponse"
+ *          200:
+ *              $ref: "#/responses/Standard200ErrorResponse"
+ */
+router.route('/check-refresh').get(
+  expressJwt({
+    secret: config.jwtSecretRefresh
+  }),
+  authCtrl.check
+);
 
 module.exports = router;
